--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "gulp-watch": "^4.3.11",
     "normalize.css": "^7.0.0",
     "postcss": "^7.0.16",
-    "postcss-hexrgba": "1.0.0",
+    "postcss-hexrgba": "^1.0.0",
     "postcss-import": "^11.0.0",
     "postcss-mixins": "^6.2.0",
     "postcss-nested": "^2.1.2",
